bookstack/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookstack
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bookstack
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: bookstack
    spec:
      restartPolicy: Always
      containers:
      - name: bookstack
        image: linuxserver/bookstack:v0.29.3-ls97
        ports:
          - containerPort: 80
            name: http
        livenessProbe:
          failureThreshold: 10000
          httpGet:
            path: /
            port: http
        volumeMounts:
          - mountPath: /config/www/uploads
            name: data
          - name: env
            mountPath: /config/www/.env
            subPath: .env
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: bookstack
        - name: env
          secret:
            secretName: bookstack
            items:
            - key: temp-env
              path: .env
